--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "google-translate-api-browser": "^1.1.71",
     "promise-mysql": "^4.0.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
